# 20game_pong

./: CMakeLists.txt  CMakePresets.json  README.md
.cache/clangd/index/: common.cpp.C5C907A9827EE417.idx  common.h.66875F214FBCC6C1.idx  game.cpp.76FB12B773EF78FE.idx  game.h.7FBD1906F736D010.idx  main.cpp.3EF773E7FA695663.idx  paddle.cpp.7FF7F581BCF91BB9.idx  paddle.h.644B0E70EB20B20E.idx
flecs/: main.flecs  paddles.flecs
src/: ai.cpp  ai.h  ball.cpp  ball.h  common.cpp  common.h  game.cpp  game.h  main.cpp  paddle.cpp  paddle.h
